--- a/css/my-slider.css
+++ b/css/my-slider.css
@@ -1,4 +1,4 @@
-.my-slider  {
+.my-slider {
     margin-bottom: 40px;
 }
 
@@ -15,6 +15,7 @@
     top: 50%;
     translate: 0 -50%;
     width: 18px;
+    z-index: 5;
     height: 27px;
     border-radius: 50%;
     background-color: var(--blue);
