--- a/css/header.css
+++ b/css/header.css
@@ -20,12 +20,40 @@
 }
 
 .header__menu {
-    display: none;
+    display: flex;
+    translate: -100% 0;
+    transition: translate 1s ease 0s;
+    background: black;
+    opacity: 0.9;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-top: 110px;
+    width: 100%;
+    height: 100%;
+    color: white;
+    flex-direction: column;
+    gap: 27px;
+    font-size: 20px;
+    max-width: 100%;
+    z-index: 20;
+    align-items: center;
+
+    &.active {
+        translate: 0 0;
+    }
+
     @media (min-width: 480px) {
         position: absolute;
+        flex-direction: row;
+        translate: 0 0;
         top: 10px;
+        width: inherit;
+        height: inherit;
+        left: inherit;
+        padding-top: 0;
         right: 20px;
-        display: flex;
+        background: none;
         gap: 10px;
         color: white;
     }
@@ -55,28 +83,6 @@
             transition: color 0.5s ease 0s;
             color: var(--green);
         }
-    }
-}
-
-.header__menu.active {
-    background: black;
-    opacity: 0.9;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    padding-top: 110px;
-    width: 100%;
-    height: 100%;
-    color: white;
-    flex-direction: column;
-    gap: 27px;
-    font-size: 20px;
-    max-width: 100%;
-    z-index: 20;
-    align-items: center;
-    @media (min-width: 480px) {
-        display: none;
     }
 }
 
